--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "vue": "^3.5.12",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.6"
