--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && cp 404.html dist/ && gh-pages -d dist"
+    "deploy": "npm run build && cp 404.html dist/ && cp -r api/ dist/api/ && gh-pages -d dist"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
